# matrix

./: CMakeLists.txt  README.lapack.txt  README.md  install-matrix.sh  install-ubuntu-matrix.sh  makefile  makefile.osx  makefile.static  makefile.ubuntu20.04  match-array.c  matrix-config.cmake  mioarray-rich.c  mioarray.c  mioarray.h  mioeigen-test.c  mioregress.c  mioregress.h  mlp-cat.c  mlp-regr.c  pca.c  pcr.bad.c  pcr.c  pcr.weird.c  pls.c  polyco.c  regr.c  slp-cat.c
tests/: mioarray-test.correct  mioeigen-test.correct
